--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 	<div class="container mw-100 py-5">
-		<div id="messages-container" style="height:80px; overflow-y:auto;">
+		<div id="messages-container" style="height:200px; overflow-y:auto;">
 			<table class="table table-striped">
 				<tbody id="messages">
 				</tbody>
@@ -18,6 +18,7 @@
 			  <input id="m" type="text" class="form-control" placeholder="Message">
 			<div class="input-group-append"><button class="btn btn-primary" type="button">Send</button>
 			</div>
+		  </div>
 		</form>
 	</div>
 		
@@ -27,13 +28,16 @@
 	<script>
 	  $(function () {
 		var socket = io();
+		var userID = Math.floor(Math.random() * 5000000);
 		$('form').submit(function(){
-		  socket.emit('chat message', $('#m').val());
+		  socket.emit('chat message', {'message':$('#m').val(), 'id':userID});
 		  $('#m').val('');
 		  return false;
 		});
-		socket.on('chat message', function(msg){
-			$('#messages').append($('<tr><td>').text(msg));
+		socket.on('chat message', function(data){
+			var msg_user_id = data.id;
+			var msg_text = data.message;
+			$('#messages').append($('<tr><td>').text(msg_user_id.toString() + ":    "  + msg_text));
 			var scroll_box = $("#messages-container");
 			scroll_box.scrollTop(scroll_box.prop("scrollHeight"));
 		});
